@@ -4,6 +4,9 @@ Changelog
 0.3 (unreleased)
 ----------------
 
+- Remove empty skins/ folders doormat_styles/ and doormat_templates/ (fixes
+  http://plone.org/products/doormat/issues/4: Skin dirs missing from egg)
+
 0.2 (2010-06-11)
 ----------------
 
